--- a/src/templates/screens/IssueList.vm
+++ b/src/templates/screens/IssueList.vm
@@ -1,5 +1,5 @@
 <div class="app" id="issuelist">
-$page.setTitle("Queue List")
+$page.setTitle("Queue list")
 <h2>$page.Title</h2>
 #set ( $action = $link.setPage("IssueList.vm").setAction("Search") )
 #set ($user = $data.User)
@@ -19,7 +19,7 @@ $page.setTitle("Queue List")
 <input type="hidden" name="pageNum" value="$pageNum" />
 ## PAGINATION
 #if( $paginated)
- <div class="misc">
+ <p class="paginate">
  #if( $scarabR.PrevPage != 0 )
   #set ( $prevLink = $link.setPathInfo("resultsperpage", $resultsPerPage.toString()).setPathInfo("pageNum", $scarabR.PrevPage.toString()).setPage("IssueList.vm"))
   <a href="$prevLink">&laquo;</a> previous |
@@ -29,35 +29,40 @@ $page.setTitle("Queue List")
   #set ( $nextLink = $link.setPathInfo("resultsperpage", $resultsPerPage.toString()).setPathInfo("pageNum", $scarabR.NextPage.toString()).setPage("IssueList.vm"))
   | <a href="$nextLink">&raquo;</a> next
  #end
+ </p>
 #end
 <div class="functnbar">
- <table cellpadding="0" cellspacing="0" border="0">
-  <tr>
-#if ($searchType.equals("advanced"))
-  <td><strong>save:</strong></td>
-#end
-  <td><strong>verbose view:</strong></td>
-  <td><strong>reassign:</strong></td>
-#if ($searchType.equals("advanced"))
-  <td><strong>refine query:</strong></td>
-#end
- </tr>
+<table cellpadding="4" cellspacing="0" border="1">
  <tr>
+  <td class="firstchild">
 #if ($searchType.equals("advanced"))
-  <td><input type="submit" value="query" name="eventSubmit_doRedirecttosavequery" /></td>
-#end
   <td>
-   <input type="submit" value="Selected"  name="eventSubmit_doViewselected" name="eventSubmit_doViewselected" />&nbsp;<input type="submit" value="all" name="eventSubmit_doViewall" /></td>
-  <td><input type="submit" value="Selected" name="eventSubmit_doReassignselected" />&nbsp;<input type="submit" value="all" name="eventSubmit_doReassignall" /></td>
+ <div>
+ Save
+</div> <input type="submit" value="query" name="eventSubmit_doRedirecttosavequery" /></td>
+#end
+  <td><div>
+Verbose view
+</div><input type="submit" value="Selected"  name="eventSubmit_doViewselected" name="eventSubmit_doViewselected" />&nbsp;<input type="submit" value="All" name="eventSubmit_doViewall" />
+</td>
+  <td><div>
+Reassign
+</div> 
+  <input type="submit" value="Selected" name="eventSubmit_doReassignselected" />&nbsp;<input type="submit" value="All" name="eventSubmit_doReassignall" />
+  </td>
 #if ($searchType.equals("advanced"))
-  <td><input type="submit" value="go" name="eventSubmit_doRefinequery" /></td>
+  <td><div>
+Refine query
+</div>
+<input type="submit" value="go" name="eventSubmit_doRefinequery" />
+</td>
 #end
  </tr>
  </table>
 </div>
-<h3>Search Results</h3>
-(<a href="$link.setPage("ConfigureIssueList.vm")">add/remove attributes from view</a>)</div>
-<div>
+<h3>Search results</h3>
+<p>(<a href="$link.setPage("ConfigureIssueList.vm")">Add/remove attributes from view</a>)</p>
+
  <table width="100%" border="1" cellspacing="2" cellpadding="3">
   <tr>
   <th>
@@ -94,42 +99,49 @@ $page.setTitle("Queue List")
   </tr>
 #end
   </table>
-</div>
-<div class="misc">
+
+<p class="paginate">
  issues per page:&#160;
  <input type="radio" value="2" name="resultsPerPage" #if( $resultsPerPage == 2 ) checked="checked" #end /> 2
  <input type="radio" name="resultsPerPage" value="50" #if( $resultsPerPage == 50 ) checked="checked" #end /> 50
  <input type="radio" name="resultsPerPage" value="75" #if( $resultsPerPage == 75 ) checked="checked" #end /> 75
  <input type="radio" name="resultsPerPage" value="100" #if( $resultsPerPage == 100 ) checked="checked" #end /> 100
  <input type="submit" name="eventSubmit_doSearch" value="Refresh" />
-</div>
+</p>
+
 <div class="functnbar2">
- <table cellpadding="0" cellspacing="0" border="0">
-  <tr>
-#if ($searchType.equals("advanced"))
-  <td><strong>save:</strong></td>
-#end
-  <td><strong>verbose view:</strong></td>
-  <td><strong>reassign:</strong></td>
-#if ($searchType.equals("advanced"))
-  <td><strong>refine query:</strong></td>
-#end
- </tr>
+<table cellpadding="4" cellspacing="0" border="1">
  <tr>
+  <td class="firstchild">
 #if ($searchType.equals("advanced"))
-  <td><input type="submit" value="query" name="eventSubmit_doRedirecttosavequery" /></td>
-#end
   <td>
-   <input type="submit" value="Selected"  name="eventSubmit_doViewselected" name="eventSubmit_doViewselected" />&nbsp;<input type="submit" value="all" name="eventSubmit_doViewall" /></td>
-  <td><input type="submit" value="Selected" name="eventSubmit_doReassignselected" />&nbsp;<input type="submit" value="all" name="eventSubmit_doReassignall" /></td>
+ <div>
+ Save
+</div> <input type="submit" value="query" name="eventSubmit_doRedirecttosavequery" /></td>
+#end
+  <td><div>
+Verbose view
+</div><input type="submit" value="Selected"  name="eventSubmit_doViewselected" name="eventSubmit_doViewselected" />&nbsp;<input type="submit" value="All" name="eventSubmit_doViewall" />
+</td>
+  <td><div>
+Reassign
+</div> 
+  <input type="submit" value="Selected" name="eventSubmit_doReassignselected" />&nbsp;<input type="submit" value="All" name="eventSubmit_doReassignall" />
+  </td>
 #if ($searchType.equals("advanced"))
-  <td><input type="submit" value="go" name="eventSubmit_doRefinequery" /></td>
+  <td><div>
+Refine query
+</div>
+<input type="submit" value="go" name="eventSubmit_doRefinequery" />
+</td>
 #end
  </tr>
  </table>
 </div>
+
+
 #if( $paginated)
- <div class="misc">
+ <p class="paginate">
  #if( $scarabR.PrevPage != 0 )
   #set ( $prevLink = $link.setPage("IssueList.vm").setPathInfo("resultsperpage", $resultsPerPage.toString()).setPathInfo("pageNum", $scarabR.PrevPage.toString()))
   <a href="$prevLink">&laquo;</a> previous |
@@ -141,5 +153,6 @@ $page.setTitle("Queue List")
  #end
 #end
 $intake.declareGroups()
+</p>
 </form>
 </div>
