--- a/src/templates/screens/SaveTemplate.vm
+++ b/src/templates/screens/SaveTemplate.vm
@@ -1,4 +1,4 @@
-$page.setTitle("Issue Template")
+$page.setTitle("Issue template")
 #set ($action = $link.setPage("SaveTemplate.vm").setAction("TemplateList").addPathInfo("nextTemplate", "TemplateList.vm").toString())
 #set ($module = $scarabR.CurrentModule)
 #set ($issueId = $data.Parameters.getString("issue_id"))
@@ -10,95 +10,100 @@ $page.setTitle("Issue Template")
 #set ($templateInfo = $scarabR.IssueTemplateInfo)
 #set ($templateGroup = $intake.IssueTemplateInfo.mapTo($templateInfo))
 #set ($issueGroup = $intake.Issue.mapTo($issue))
-<div class="app" id="saveTemplate">
+<div class="app" id="savetemplate">
 <form method="post" action="$action" >
 #if ($issueId) <input type="hidden" name="issue_id" value="$issueId" /> #end
-<h3>$page.Title</h3>
+<h2>$page.Title</h2>
 <div class="axial">
-    <table border="0" cellspacing="2" cellpadding="3">
-       <tr>
-            <th>Template Name</th>
-            <td>
-             #fieldErrorMsg($templateGroup.Name "")
-            <input type="text" size="25" value="$!templateGroup.Name" name="$templateGroup.Name.Key" />
-            </td>
-       </tr>
-       <tr>
-            <th>Template Desc</th>
-            <td>
-            <textarea rows="4" cols="40" name="$templateGroup.Description.Key">$!templateGroup.Description</textarea>
-            </td>
-       </tr>
-       <tr>
-         <th width="120">Availability</th>
-         <td>#templateTypeSelectBox ($issue)</td>
-       </tr>
-       <tr>
-         <th width="120">Current Module</th>
-         <td>$module.Name</td>
-         <input type="hidden" name="$issueGroup.ModuleId.Key" value="$module.ModuleId" />
-       </tr>
+<table border="0" cellspacing="2" cellpadding="3">
+<tr>
+     <th>Template name</th>
+     <td>
+      #fieldErrorMsg($templateGroup.Name "")
+     <input type="text" size="25" value="$!templateGroup.Name" name="$templateGroup.Name.Key" />
+     </td>
+</tr>
+<tr>
+     <th>Template desc</th>
+     <td>
+     <textarea rows="4" cols="40" name="$templateGroup.Description.Key">$!templateGroup.Description</textarea>
+     </td>
+</tr>
+<tr>
+  <th width="120">Availability</th>
+  <td>#templateTypeSelectBox ($issue)</td>
+</tr>
+<tr>
+  <th width="120">Current module</th>
+  <td>$module.Name</td>
+  <input type="hidden" name="$issueGroup.ModuleId.Key" value="$module.ModuleId" />
+</tr>
 #if ($issueId)
-       <tr>
-          <th>Template Author</th>
-             #set ($createdUser = $issue.CreatedBy)
-          <td>
-          #if ($createduser)
-          <a href="mailTo:$createdUser.Email">$createdUser.FirstName $createdUser.LastName</a>
-          #else
-          &#160;
-          #end
-          </td>
-       </tr>
+<tr>
+   <th>Template author</th>
+      #set ($createdUser = $issue.CreatedBy)
+   <td>
+   #if ($createduser)
+   <a href="mailTo:$createdUser.Email">$createdUser.FirstName $createdUser.LastName</a>
+   #else
+   &#160;
+   #end
+   </td>
+</tr>
 #end
-   </table>
+</table>
 </div>
 <h3>Template Attributes</h3>
 <div class="axial">
-        <table cellspacing="2" cellpadding="3" border="0">
+ <table cellspacing="2" cellpadding="3" border="0">
 #set ($attrValues = $issue.ModuleAttributeValuesMap)
 #set ( $group = $intake.AttributeValue.mapTo($attrValue) )
 #foreach ( $attKey in $attrValues.sequence() )
   #set ( $attVal = $attrValues.get($attKey) )
-    <tr>
-        <th>
-     #if ( $attVal.Attribute.AttributeType.ValidationKey )
-        #set ( $field = $attVal.Attribute.AttributeType.ValidationKey )
-     #elseif ($attVal.Attribute.AttributeType.Name == "combo-box" )
-        #set ( $field = "OptionId" )
-     #elseif ($attVal.Attribute.AttributeType.Name == "string" )
-        #set ( $field = "Value" )
-     #end
+ <tr>
+     <th>
+  #if ( $attVal.Attribute.AttributeType.ValidationKey )
+     #set ( $field = $attVal.Attribute.AttributeType.ValidationKey )
+  #elseif ($attVal.Attribute.AttributeType.Name == "combo-box" )
+     #set ( $field = "OptionId" )
+  #elseif ($attVal.Attribute.AttributeType.Name == "string" )
+     #set ( $field = "Value" )
+  #end
 #*     #if ( $attVal.isRequired() )
-        *
-     #end
+     *
+  #end
 *#
-     $attVal.Attribute.Name</th>
-    <td>
-    #if ($attVal.Attribute.AttributeType.AttributeClass.Name == "user")
-          #userSelectBox ($attVal "")
-    #elseif ($attVal.Attribute.AttributeType.Name == "combo-box" )
-         #attrValueLeafSelect ($attVal $field "")
-    #else
-        #attrValueErrorMsg( $attVal "Value" )
-        #if ($attVal.Attribute.AttributeType.Name == "long-string" )
-            <textarea name= "$attrInput.Value.Key" cols="40"
-               rows="4">$!attrInput.Value</textarea>
-        #else
-           <input name= "$attrInput.Value.Key"
-                value="$!attrInput.Value" size="45" type="text" />
-        #end
-    #end
-    </td>
-   </tr>
+  $attVal.Attribute.Name</th>
+ <td>
+ #if ($attVal.Attribute.AttributeType.AttributeClass.Name == "user")
+       #userSelectBox ($attVal "")
+ #elseif ($attVal.Attribute.AttributeType.Name == "combo-box" )
+      #attrValueLeafSelect ($attVal $field "")
+ #else
+     #attrValueErrorMsg( $attVal "Value" )
+     #if ($attVal.Attribute.AttributeType.Name == "long-string" )
+         <textarea name= "$attrInput.Value.Key" cols="40"
+            rows="4">$!attrInput.Value</textarea>
+     #else
+        <input name= "$attrInput.Value.Key"
+             value="$!attrInput.Value" size="45" type="text" />
+     #end
+ #end
+ </td>
+</tr>
 #end
 </table>
 </div>
-<p class="functnbar">
+<div class="functnbar2">
+<table cellpadding="4" cellspacing="0" border="1">
+ <tr>
+  <td class="firstchild">
 <input type="submit" value="Save details" name="eventSubmit_doSubmit" />&#160;
 <input type="submit" value="Cancel" name="eventSubmit_doCancel"  />&#160;
-<input type="submit" value="Clear form" />
-</p>
+<input type="submit" value="Clear form" /></td>
+   </tr>
+</table>
+</div>
 $intake.declareGroups()
 </form>
 </div>
