--- a/src/templates/screens/TemplateList.vm
+++ b/src/templates/screens/TemplateList.vm
@@ -1,4 +1,4 @@
-$page.setTitle("Template List")
+$page.setTitle("Template list")
 #set ($action = $link.setPage("TemplateList.vm").setAction("TemplateList").addPathInfo("nextTemplate", "TemplateList.vm").toString())
 #set ($module = $scarabR.CurrentModule)
 #set ($user = $data.User)
@@ -7,11 +7,18 @@ $page.setTitle("Template List")
 #end
 <div class="app" id="templateList">
 <form method="post" action="$action" >
-<p class="functnbar">
-   <input type="submit" value="create new" name="eventSubmit_doCreatenew" />&#160;
+<div class="functnbar">
+<table cellpadding="4" cellspacing="0" border="1">
+ <tr>
+  <td class="firstchild">
+  <input type="submit" value="create new" name="eventSubmit_doCreatenew" />&#160;
    <input type="submit" value="Delete selected" name="eventSubmit_doDeletetemplates" />
-      &#160;<input type="submit" value="Cancel" name="eventSubmit_doCancel" /></p>
-<h3>$page.Title</h3>
+      &#160;<input type="submit" value="Cancel" name="eventSubmit_doCancel" />
+      </td>
+ </tr>
+</table>
+</div>
+<h2>$page.Title</h2>
 #if ($noTemplates.equals("true"))
     <p><strong class="alert">
     There are no stored templates, click <a
@@ -20,74 +27,80 @@ $page.setTitle("Template List")
     </strong></p>
 #else
 ##  FIXME: add prev/next nav       <p>&#171; previous | 1 of 1 | next &#187;</p>
-        <table width="100%" border="1" cellspacing="2" cellpadding="3">
-        <tr>
-        <th nowrap="nowrap">
-        <img src="/scarab/images/icon_uparrow.gif" width="13" height="8" alt="sort ascending" title="sort ascending" border="0" />
-        <img src="/scarab/images/icon_downarrow.gif" width="13" height="8" alt="sort descending" title="sort descending" border="0" />
-        </th>
-        <th>Template name</th>
-        <th>Template desc</th>
-        <th>Location</th>
-        <th>Initiated By</th>
-        </tr>
+  <table width="100%" border="1" cellspacing="2" cellpadding="3">
+  <tr>
+  <th nowrap="nowrap">
+  <img src="/scarab/images/icon_uparrow.gif" width="13" height="8" alt="sort ascending" title="sort ascending" border="0" />
+  <img src="/scarab/images/icon_downarrow.gif" width="13" height="8" alt="sort descending" title="sort descending" border="0" />
+  </th>
+  <th>Template name</th>
+  <th>Template desc</th>
+  <th>Location</th>
+  <th>Initiated by</th>
+  </tr>
 #foreach ( $template in $module.getPrivateTemplates($user) )
-         #indexedRows($velocityCount)
-        <td><input type="checkbox" name="delete_$template.IssueId" /></td>
-        #set ( $editLink = $link.setPathInfo("issue_id", $template.IssueId.toString()).setPage("SaveTemplate.vm").toString())
-        <td><a href="$editLink">$template.TemplateInfo.Name</a></td>
-        <td>#if($template.TemplateInfo.Description)  $template.TemplateInfo.Description #else &nbsp; #end</td>
-        <td>$template.IssueType.Name
-           #if (!$template.TemplateInfo.Approved)
-             (until approved)
-           #end
-        </td>
-         #set ($createdUser = $template.CreatedBy)
-         <td>#if ($createdUser)
-         <a href="mailTo:$createdUser.Email">$createdUser.FirstName $createdUser.LastName</a>
-         #else
-         &#160;
-         #end
-         </td>
-        </tr>
+   #indexedRows($velocityCount)
+  <td><input type="checkbox" name="delete_$template.IssueId" /></td>
+  #set ( $editLink = $link.setPathInfo("issue_id", $template.IssueId.toString()).setPage("SaveTemplate.vm").toString())
+  <td><a href="$editLink">$template.TemplateInfo.Name</a></td>
+  <td>#if($template.TemplateInfo.Description)  $template.TemplateInfo.Description #else &nbsp; #end</td>
+  <td>$template.IssueType.Name
+     #if (!$template.TemplateInfo.Approved)
+       (until approved)
+     #end
+  </td>
+   #set ($createdUser = $template.CreatedBy)
+   <td>#if ($createdUser)
+   <a href="mailTo:$createdUser.Email">$createdUser.FirstName $createdUser.LastName</a>
+   #else
+   &#160;
+   #end
+   </td>
+  </tr>
 #end
 #foreach ( $template in $module.GlobalTemplates )
-         #indexedRows($velocityCount)
-      #if ($security.hasPermission("Item | Delete", $module))
-        <td><input type="checkbox" name="delete_$template.IssueId" /></td>
-      #else
-        <td>&nbsp;</td>
-      #end
-        <td>
-          #if ($security.hasPermission("Item | Delete", $module))
-            #set ( $editLink = $link.setPathInfo("issue_id", $template.IssueId.toString()).setPage("SaveTemplate.vm").toString())
-            <a href="$editLink">$template.TemplateInfo.Name</a>
-          #else
-            $template.TemplateInfo.Name
-          #end
-        </td>
-        <td>#if($template.TemplateInfo.Description)  $template.TemplateInfo.Description #else &nbsp; #end</td>
-        <td>$template.IssueType.Name
-           #if (!$template.TemplateInfo.Approved)
-             (until approved)
-           #end
-        </td>
-         #set ($createdUser = $template.CreatedBy)
-         <td>#if ($createdUser)
-         <a href="mailTo:$createdUser.Email">$createdUser.FirstName $createdUser.LastName</a>
-         #else
-         &#160;
-         #end
-         </td>
-        </tr>
+   #indexedRows($velocityCount)
+#if ($security.hasPermission("Item | Delete", $module))
+  <td><input type="checkbox" name="delete_$template.IssueId" /></td>
+#else
+  <td>&nbsp;</td>
 #end
-        </table>
-##  FIXME: add prev/next nav       <p>&#171; previous | 1 of 1 | next &#187;</p>
-   <p class="functnbar">
-   #if ($user.UserId)
-        <input type="submit" value="create new" name="eventSubmit_doCreatenew" />&#160;
-        <input type="submit" value="Delete selected" name="eventSubmit_doDeletetemplates" />
+  <td>
+    #if ($security.hasPermission("Item | Delete", $module))
+      #set ( $editLink = $link.setPathInfo("issue_id", $template.IssueId.toString()).setPage("SaveTemplate.vm").toString())
+      <a href="$editLink">$template.TemplateInfo.Name</a>
+    #else
+      $template.TemplateInfo.Name
+    #end
+  </td>
+  <td>#if($template.TemplateInfo.Description)  $template.TemplateInfo.Description #else &nbsp; #end</td>
+  <td>$template.IssueType.Name
+     #if (!$template.TemplateInfo.Approved)
+       (until approved)
+     #end
+  </td>
+   #set ($createdUser = $template.CreatedBy)
+   <td>#if ($createdUser)
+   <a href="mailTo:$createdUser.Email">$createdUser.FirstName $createdUser.LastName</a>
+   #else
+   &#160;
    #end
-      &#160;<input type="submit" value="Cancel" name="eventSubmit_doCancel" /></p>
+   </td>
+  </tr>
 #end
+  </table>
+##  FIXME: add prev/next nav       <p>&#171; previous | 1 of 1 | next &#187;</p>
+<div class="functnbar2">
+<table cellpadding="4" cellspacing="0" border="1">
+ <tr>
+  <td class="firstchild">
+  #if ($user.UserId)<input type="submit" value="create new" name="eventSubmit_doCreatenew" />&#160;
+   <input type="submit" value="Delete selected" name="eventSubmit_doDeletetemplates" />
+      &#160;  
+   #end<input type="submit" value="Cancel" name="eventSubmit_doCancel" />
+      </td>
+ </tr>
+</table>
+</div>
+  #end
 </div>
