--- a/src/templates/screens/reports/Report_1.vm
+++ b/src/templates/screens/reports/Report_1.vm
@@ -20,12 +20,14 @@
 <p>page 1 of 1</p>
 #set ( $action = $link.setPage("Links.vm").setAction("GenerateReport") )
 <form method="get" action="$action">
-<p class="functnbar">
-    <input type="submit" value="Save this report"
+<div class="functnbar">
+<table cellpadding="4" cellspacing="0" border="1">
+ <tr>
+  <td class="firstchild"><input type="submit" value="Save this report"
         name="eventSubmit_doSavereport" />&nbsp;
     <input type="submit" value="Print" name="eventSubmit_doPrint" />&nbsp;
     <input type="submit" value="Done" name="eventSubmit_doCancel" />
-</p>
+</td></tr></table></div>
 #addReportHiddenInputs($report "reports,Report_1.vm")
 $intake.declareGroups()
 </form>
